Fix the input number overlap under MAX button issue

--- a/src/components/TokenInput.scss
+++ b/src/components/TokenInput.scss
@@ -8,7 +8,7 @@ div.tokenInput {
   input {
     position: absolute;
     left: 60px;
-    width: 258px;
+    width: 168px;
     height: 32px;
     display: block;
     background: $white;
@@ -17,6 +17,7 @@ div.tokenInput {
     margin-left: 16px;
 
     padding-left: 16px;
+    padding-right: 90px;
     color: $text-black;
     font-size: 16px;
     font-family: $font-family;
@@ -39,7 +40,7 @@ div.tokenInput {
 
   button.max {
     position: absolute;
-    right: 16px;
+    right: 2px;
     z-index: 1;
     height: 32px;
     color: $text-red;
